# Aria---Document-Management-Employee

./: .env.deploy.template  .env.example  .env.test  .gitignore  404_ERRORS_EXPLAINED.md  ACCELERATION_PLAN.md  ADMIN_MODULE_ASSIGNMENT_GUIDE.md  ADVANCED_FEATURES.md  AGENT_INTERACTION_FLOWS.md  AI_BOT_IMPLEMENTATION_ROADMAP.md  AI_BOT_MARKET_ANALYSIS_2025.md  ALL_BOTS_INVENTORY.md  ANALYSIS_COMPLETE_SUMMARY.txt  API_DOCUMENTATION.md  API_GATEWAY_COMPLETE.md  ARCHITECTURE_ANALYSIS.md  ARIA_15_BOTS_COMPLETE.md  ARIA_25_BOTS_COMPLETE_SA_READY.md  ARIA_AI_BOT_MARKET_ANALYSIS_FINAL_2025.md  ARIA_AI_BOT_MARKET_ANALYSIS_OCTOBER_2025.md  ARIA_AUTOMATION_DEPLOYMENT.md  ARIA_BOT_READINESS_SUMMARY.md  ARIA_COMPETITIVE_ANALYSIS.md  ARIA_DEPLOYMENT_ROADMAP.md  ARIA_DUAL_MODE_STRATEGY.md  ARIA_ERP_REPLACEMENT_STRATEGY.md  ARIA_INTEGRATION_ARCHITECTURE.md  ARIA_MARKET_COMPARISON_AND_AI_BOT_ROADMAP_2025.md  ARIA_MARKET_COMPARISON_AND_READINESS.md  ARIA_MARKET_COMPARISON_BOT_READINESS_2025.md  ARIA_MARKET_READINESS_2025_UPDATED.md  ARIA_MARKET_READINESS_AI_BOT_2025.md  ARIA_MARKET_READINESS_REALITY_CHECK_OCT_2025.md  ARIA_MARKET_READINESS_REPORT_2025.md  ARIA_MARKET_READY_EXECUTIVE_SUMMARY.md  ARIA_TRANSFORMATION.md  ARIA_VS_COMPETITORS_VISUAL.md  ARIA_VS_MARKET_COMPARISON_2025.md  ARIA_VS_MARKET_FINAL.md  ARIA_VS_MARKET_VISUAL_COMPARISON.md  (+491 more)
.git-hooks/: pre-commit
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-complete.yml  deploy.yml  dev-to-main.yml  hotfix.yml  production-deploy.yml  production.yml  test.yml  tests.yml
backend/: .dockerignore  .env.example  DEPLOYMENT_READY_REPORT.md  Dockerfile  Dockerfile.commercial  README.md  TESTING_RESULTS.md  add_document_endpoint.py  add_master_data_tables.sql  add_remittance_and_returns_tables.sql  admin_token.txt  alembic.ini  api_expanded.py  api_phase1_complete.py  api_production_v2.py  api_simulation.py  aria.db  aria_complete_minimal.py  aria_controller.py  aria_enhanced.py  aria_production_complete.py  auth.py  auth_integrated.py  auth_production.py  bot_orchestrator.py  bot_registry.py  bots_advanced.py  business_data_extractor.py  business_schemas.sql  complete_backend.py  comprehensive_bot_tests.py  comprehensive_seed.py  comprehensive_simulation.py  create_admin.py  create_aria_tables.py  create_compliance_db.py  create_erp_tables.sql  create_fixed_assets_tables.sql  create_mobile_db.py  database.py  (+106 more)
backend-fastapi/: LICENSE  README.md  pyproject.toml  run.py
backend-fastapi/aria/: __init__.py  main.py
backend-fastapi/aria/api/: __init__.py
backend-fastapi/aria/api/v1/: __init__.py  router.py
backend-fastapi/aria/api/v1/endpoints/: __init__.py  ai.py  auth.py  documents.py  settings.py  users.py  websocket.py
backend-fastapi/aria/core/: config.py  database.py  logging.py  security.py
backend-fastapi/aria/dependencies/: __init__.py  auth.py
backend-fastapi/aria/middleware/: __init__.py  rate_limit.py  security.py
backend-fastapi/aria/models/: __init__.py  base.py  document.py  settings.py  user.py
backend-fastapi/aria/schemas/: __init__.py  ai.py  base.py  document.py  settings.py  user.py
backend-fastapi/aria/services/: __init__.py  ai_service.py  settings_service.py  user_service.py  websocket_service.py
backend-modern/: pyproject.toml
backend-modern/aria/: __init__.py  main.py
backend-modern/aria/api/: __init__.py  websocket.py
backend-modern/aria/api/analytics/: router.py
backend-modern/aria/api/auth/: __init__.py  router.py
backend-modern/aria/api/chat/: __init__.py  router.py
backend-modern/aria/api/config/: __init__.py  router.py
backend-modern/aria/api/documents/: __init__.py  router.py
backend-modern/aria/api/v1/: chat.py  router.py
backend-modern/aria/core/: config.py  database.py  security.py
backend-modern/aria/models/: __init__.py  analytics.py  chat.py  document.py  user.py
backend-modern/aria/schemas/: __init__.py  auth.py  chat.py
backend-modern/aria/services/: __init__.py  ai_service.py  websocket_service.py
backend-modern/aria/services/auth/: service.py
backend/alembic/: README.md  env.py
backend/api/: analytics.py  document_processing.py
cf-deploy-package/: .gitignore  README.md  wrangler.pages.toml  wrangler.toml
cf-deployment/: README.md  index.html  wrangler.pages.toml
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT.md  CONFIGURATION.md  GO_LIVE_TESTING_PROCEDURE.md  INSTALLATION.md  MONTH_SIMULATION_GUIDE.md  OFFICE365_EMAIL_SETUP.md  QUICK_START.md  SECURITY.md  USER_GUIDE.md
frontend/: .dockerignore  .env.cloudflare  .env.development.local  .env.example  .env.production  .env.production.local  .eslintrc.cjs  Dockerfile  Dockerfile.dev  README.md  create_remaining_components.sh  ecosystem.config.js  ecosystem.config.js.backup  index.html  jest.config.js  jest.setup.js  next.config.js  next.config.js.backup  package-lock.json  package.json  package.json.backup  playwright.config.ts  production-readiness-assessment.js  production-readiness-report.json  run_tests.sh  simple_next.config.js  simple_package.json  tailwind.config.js  temp_fix.js  test-env.js  test-frontend-pages.js  test-output.txt  test-production-system.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend-v2/: .env  .gitignore  package-lock.json  package.json  tsconfig.node.json
frontend-vite/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
marketing/: LINKEDIN_CAMPAIGN.md
nginx/: nginx.prod.conf  nginx.vantax.conf
revolutionary-ui-package/: DEPLOYMENT_INSTRUCTIONS.md  README.md
scripts/: build-production.sh  deploy-production.sh  production_setup.sh  quick_setup.sh  world-class-deploy.sh
tests/: README.md  __init__.py  config.py  config.yaml  requirements.txt  test_gl.py  test_master_data.py  test_smoke.py  ultimate_test_suite.py
tools/: bot_generator.py
uploads/: 93282f37-f732-4b47-8bb1-2d791203cb19.txt
website/: README.md  demo.html  index.html  pricing.html  styles.css  training.html
workers-api/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
(+2157 files in other folders)
